[gd_scene load_steps=25 format=3 uid="uid://cfliao3pj1bse"]

[ext_resource type="Script" path="res://Game Components/Levels/atlas.gd" id="1_hvhjv"]
[ext_resource type="Script" path="res://Game Components/AtlasCamera2D.gd" id="2_akw28"]
[ext_resource type="Texture2D" uid="uid://23303up32c2s" path="res://Assets/Images/O9F48H0.jpg" id="2_nmgon"]
[ext_resource type="Texture2D" uid="uid://dp1j1xagrvvwb" path="res://Assets/Images/arrow-button-littleicon.png" id="4_hqr4p"]
[ext_resource type="Script" path="res://Game Components/MapLevelIndicators/LevelIndicatorIcon.gd" id="5_hk2hs"]
[ext_resource type="Script" path="res://Game Components/MapLevelIndicators/LevelIndicatorIcon2.gd" id="6_q1k4p"]
[ext_resource type="Script" path="res://Game Components/MapLevelIndicators/LevelIndicatorIcon3.gd" id="7_x5sbi"]
[ext_resource type="Script" path="res://Game Components/MapLevelIndicators/LevelIndicatorIcon4.gd" id="8_ylcf1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mocp0"]
size = Vector2(411.608, 394.667)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xbywv"]
bg_color = Color(0.0313726, 0.184314, 0.0117647, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000
shadow_color = Color(0, 0.196078, 0, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xvvru"]
bg_color = Color(0.921569, 0.313726, 0.8, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ykg2n"]
bg_color = Color(0.376471, 0.611765, 0.901961, 1)
corner_radius_top_left = 500
corner_radius_top_right = 500
corner_radius_bottom_right = 500
corner_radius_bottom_left = 500

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5rinl"]
size = Vector2(47, 39)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oyvbp"]
bg_color = Color(0.0313726, 0.184314, 0.0117647, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xq6l"]
bg_color = Color(0.921569, 0.313726, 0.8, 1)
corner_radius_top_left = 500
corner_radius_top_right = 500
corner_radius_bottom_right = 500
corner_radius_bottom_left = 500

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k2srn"]
bg_color = Color(0.376471, 0.611765, 0.901961, 1)
corner_radius_top_left = 500
corner_radius_top_right = 500
corner_radius_bottom_right = 500
corner_radius_bottom_left = 500

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7hn5e"]
size = Vector2(56, 49)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5w5h8"]
bg_color = Color(0.0313726, 0.184314, 0.0117647, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfayr"]
bg_color = Color(0.921569, 0.313726, 0.8, 1)
corner_radius_top_left = 500
corner_radius_top_right = 500
corner_radius_bottom_right = 500
corner_radius_bottom_left = 500

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkiyw"]
bg_color = Color(0.376471, 0.611765, 0.901961, 1)
corner_radius_top_left = 500
corner_radius_top_right = 500
corner_radius_bottom_right = 500
corner_radius_bottom_left = 500

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bocys"]
size = Vector2(58, 43.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8b1r5"]
bg_color = Color(0.0313726, 0.184314, 0.0117647, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v43h3"]
bg_color = Color(0.921569, 0.313726, 0.8, 1)
corner_radius_top_left = 500
corner_radius_top_right = 500
corner_radius_bottom_right = 500
corner_radius_bottom_left = 500

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_01t5o"]
bg_color = Color(0.376471, 0.611765, 0.901961, 1)
corner_radius_top_left = 500
corner_radius_top_right = 500
corner_radius_bottom_right = 500
corner_radius_bottom_left = 500

[node name="Atlas" type="Node2D"]
script = ExtResource("1_hvhjv")

[node name="AtlasCamera2D" type="Camera2D" parent="."]
position = Vector2(575, 325)
position_smoothing_enabled = true
script = ExtResource("2_akw28")

[node name="Map (TextureRect)" type="TextureRect" parent="."]
offset_left = -4.0
offset_top = -171.0
offset_right = 1154.0
offset_bottom = 751.0
texture = ExtResource("2_nmgon")
expand_mode = 1

[node name="LevelIndicatorIcon" type="Area2D" parent="."]
position = Vector2(214, 392)
scale = Vector2(0.0996094, 0.09375)
script = ExtResource("5_hk2hs")

[node name="Sprite2D" type="Sprite2D" parent="LevelIndicatorIcon"]
position = Vector2(70.2747, -2432)
scale = Vector2(0.931373, 0.895833)
texture = ExtResource("4_hqr4p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelIndicatorIcon"]
position = Vector2(60.2354, -2389.33)
shape = SubResource("RectangleShape2D_mocp0")

[node name="Panel" type="Panel" parent="LevelIndicatorIcon"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1024.0
offset_top = -3381.33
offset_right = 1094.0
offset_bottom = -1354.33
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xbywv")

[node name="Label" type="Label" parent="LevelIndicatorIcon/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.455
anchor_top = 0.442
anchor_right = 0.455
anchor_bottom = 0.442
offset_left = -833.376
offset_top = -106.601
offset_right = 1007.62
offset_bottom = 107.396
theme_override_font_sizes/font_size = 150
text = "Learn about Brown Bears"

[node name="StartLevelButton" type="Button" parent="LevelIndicatorIcon/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.469
anchor_top = 0.7
anchor_right = 0.469
anchor_bottom = 0.7
offset_left = -320.91
offset_top = -341.57
offset_right = 322.088
offset_bottom = 341.43
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = SubResource("StyleBoxFlat_xvvru")
theme_override_styles/hover = SubResource("StyleBoxFlat_ykg2n")
text = "Play"

[node name="LevelIndicatorIcon2" type="Area2D" parent="."]
position = Vector2(641, 321)
script = ExtResource("6_q1k4p")

[node name="Sprite2D" type="Sprite2D" parent="LevelIndicatorIcon2"]
position = Vector2(60.9999, -13)
scale = Vector2(0.117188, 0.103516)
texture = ExtResource("4_hqr4p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelIndicatorIcon2"]
position = Vector2(65, -8)
shape = SubResource("RectangleShape2D_5rinl")

[node name="Panel" type="Panel" parent="LevelIndicatorIcon2"]
offset_left = -144.0
offset_top = -111.0
offset_right = 119.0
offset_bottom = 119.0
theme_override_styles/panel = SubResource("StyleBoxFlat_oyvbp")

[node name="Label" type="Label" parent="LevelIndicatorIcon2/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.53
anchor_top = 0.372
anchor_right = 0.53
anchor_bottom = 0.372
offset_left = -110.39
offset_top = -14.56
offset_right = 110.61
offset_bottom = 14.44
theme_override_font_sizes/font_size = 15
text = "Learn about Hawksbill Turtles"

[node name="StartLevelButton" type="Button" parent="LevelIndicatorIcon2/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.504
anchor_top = 0.643
anchor_right = 0.504
anchor_bottom = 0.643
offset_left = -39.552
offset_top = -37.89
offset_right = 39.448
offset_bottom = 38.11
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_4xq6l")
theme_override_styles/hover = SubResource("StyleBoxFlat_k2srn")
text = "Play"

[node name="LevelIndicatorIcon3" type="Area2D" parent="."]
script = ExtResource("7_x5sbi")

[node name="Sprite2D" type="Sprite2D" parent="LevelIndicatorIcon3"]
position = Vector2(887, 333)
scale = Vector2(0.123535, 0.102051)
texture = ExtResource("4_hqr4p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelIndicatorIcon3"]
position = Vector2(887, 332)
shape = SubResource("RectangleShape2D_7hn5e")

[node name="Panel" type="Panel" parent="LevelIndicatorIcon3"]
offset_left = 734.0
offset_top = 271.0
offset_right = 997.0
offset_bottom = 493.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5w5h8")

[node name="Label" type="Label" parent="LevelIndicatorIcon3/Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 73.0
offset_right = 254.0
offset_bottom = 103.0
theme_override_font_sizes/font_size = 15
text = "Learn about Sumatran Elephants"

[node name="StartLevelButton" type="Button" parent="LevelIndicatorIcon3/Panel"]
layout_mode = 0
offset_left = 84.0
offset_top = 108.0
offset_right = 163.0
offset_bottom = 178.0
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_pfayr")
theme_override_styles/hover = SubResource("StyleBoxFlat_jkiyw")
text = "Play"

[node name="LevelIndicatorIcon4" type="Area2D" parent="."]
script = ExtResource("8_ylcf1")

[node name="Sprite2D" type="Sprite2D" parent="LevelIndicatorIcon4"]
position = Vector2(981, 323)
scale = Vector2(0.119141, 0.105347)
texture = ExtResource("4_hqr4p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelIndicatorIcon4"]
position = Vector2(983, 323)
shape = SubResource("RectangleShape2D_bocys")

[node name="Panel" type="Panel" parent="LevelIndicatorIcon4"]
offset_left = 884.0
offset_top = 230.0
offset_right = 1121.0
offset_bottom = 444.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8b1r5")

[node name="Label" type="Label" parent="LevelIndicatorIcon4/Panel"]
layout_mode = 0
offset_left = 27.0
offset_top = 64.0
offset_right = 217.0
offset_bottom = 87.0
text = "Learn about Orangutans"

[node name="StartLevelButton" type="Button" parent="LevelIndicatorIcon4/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.61
anchor_right = 0.5
anchor_bottom = 0.61
offset_left = -34.5
offset_top = -20.54
offset_right = 29.5
offset_bottom = 45.46
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_v43h3")
theme_override_styles/hover = SubResource("StyleBoxFlat_01t5o")
text = "Play"

[connection signal="mouse_entered" from="LevelIndicatorIcon" to="LevelIndicatorIcon" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelIndicatorIcon" to="LevelIndicatorIcon" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelIndicatorIcon/Panel/StartLevelButton" to="LevelIndicatorIcon" method="_on_start_level_button_pressed"]
[connection signal="mouse_entered" from="LevelIndicatorIcon2" to="LevelIndicatorIcon2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelIndicatorIcon2" to="LevelIndicatorIcon2" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelIndicatorIcon2/Panel/StartLevelButton" to="LevelIndicatorIcon2" method="_on_start_level_button_pressed"]
[connection signal="mouse_entered" from="LevelIndicatorIcon3" to="LevelIndicatorIcon3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelIndicatorIcon3" to="LevelIndicatorIcon3" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="LevelIndicatorIcon4" to="LevelIndicatorIcon4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LevelIndicatorIcon4" to="LevelIndicatorIcon4" method="_on_mouse_exited"]
[connection signal="pressed" from="LevelIndicatorIcon4/Panel/StartLevelButton" to="LevelIndicatorIcon4" method="_on_start_level_button_pressed"]
